--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -28,7 +28,7 @@ jobs:
       - uses: syphar/restore-pip-download-cache@v1
         if: steps.venv.outputs.cache-hit != 'true'
 
-      - run: pip install -r Code/requirements.txt
+      - run: pip install -r requirements.txt
         if: steps.venv.outputs.chache-hit != 'true'
 
       - name: Pylint
