--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ attrs==21.4.0
 beautifulsoup4==4.11.1
 certifi==2022.6.15
 cffi==1.15.0
+charset-normalizer==2.1.0
 cryptography==37.0.2
 dill==0.3.5.1
 h11==0.13.0
@@ -13,27 +14,26 @@ lazy-object-proxy==1.7.1
 mccabe==0.7.0
 numpy==1.23.0
 outcome==1.2.0
-pandas==1.4.2
-pip==22.1.2
 platformdirs==2.5.2
 pycparser==2.21
 pylint==2.14.4
 pyOpenSSL==22.0.0
 PySocks==1.7.1
 python-dateutil==2.8.2
+python-dotenv==0.20.0
 pytz==2022.1
+requests==2.28.1
 selenium==4.2.0
-setuptools==60.2.0
-six==1.15.0
 sniffio==1.2.0
 sortedcontainers==2.4.0
 soupsieve==2.3.2.post1
 tomli==2.0.1
 tomlkit==0.11.0
+tqdm==4.64.0
 trio==0.21.0
 trio-websocket==0.9.2
 typing_extensions==4.3.0
 urllib3==1.26.9
-wheel==0.37.1
+webdriver-manager==3.8.3
 wrapt==1.14.1
 wsproto==1.1.0
